--- a/.travis.yml
+++ b/.travis.yml
@@ -15,24 +15,6 @@ cache:
 
 matrix:
   include:
-
-    ##########################################################################
-    # Clang on OSX
-    # Travis seems to take longer to start OSX instances,
-    # so leave this first for the overall build to be faster
-    ##########################################################################
-
-    # XCode 9.1
-    - env: COMPILER=clang++ BUILD_TYPE=Debug
-      os: osx
-      osx_image: xcode9.1
-      compiler: clang
-
-    - env: COMPILER=clang++ BUILD_TYPE=Release
-      os: osx
-      osx_image: xcode9.1
-      compiler: clang
-
     ##########################################################################
     # Clang on Linux
     ##########################################################################
@@ -49,7 +31,7 @@ matrix:
             - llvm-toolchain-trusty-7
 
 
-    - env: COMPILER=clang++-7 BUILD_TYPE=Release GSL_CXX_STANDARD=14
+    - env: COMPILER=clang++-7 BUILD_TYPE=Release
       addons: *clang70
 
     ##########################################################################
@@ -57,10 +39,10 @@ matrix:
     ##########################################################################
 
     # GCC 7 c++17 
-    - env: COMPILER=g++-7 BUILD_TYPE=Debug GSL_CXX_STANDARD=17
+    - env: COMPILER=g++-7 BUILD_TYPE=Debug
       addons: *gcc7
 
-    - env: COMPILER=g++-7 BUILD_TYPE=Release GSL_CXX_STANDARD=17
+    - env: COMPILER=g++-7 BUILD_TYPE=Release
       addons: *gcc7
 
 install:
@@ -79,7 +61,7 @@ install:
   ############################################################################
   # Install a recent CMake (unless already installed on OS X)
   ############################################################################
-  - CMAKE_VERSION=3.9.2
+  - CMAKE_VERSION=3.10.1
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
       CMAKE_URL="https://cmake.org/files/v${CMAKE_VERSION%.[0-9]}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz"
