--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Based on https://github.com/ldionne/hana/blob/master/.travis.yml
+# Based on https://github.com/Microsoft/GSL/blob/master/.travis.yml
 
 language: cpp
 sudo: false
@@ -20,7 +20,7 @@ matrix:
     ##########################################################################
 
     # Clang 7.0
-    - env: COMPILER=clang++-7 BUILD_TYPE=Debug
+    - env: C_COMPILER=clang-7 CXX_COMPILER=clang++-7 BUILD_TYPE=Debug
       addons: &clang70
         apt:
           packages:
@@ -30,24 +30,28 @@ matrix:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-trusty-7
 
-
-    - env: COMPILER=clang++-7 BUILD_TYPE=Release
+    - env: C_COMPILER=clang-7 CXX_COMPILER=clang++-7 BUILD_TYPE=Release
       addons: *clang70
 
     ##########################################################################
     # GCC on Linux
     ##########################################################################
 
-    # GCC 7 c++17 
-    - env: COMPILER=g++-7 BUILD_TYPE=Debug
-      addons: *gcc7
+    # GCC 7 c++17
+    - env: C_COMPILER=gcc-7 CXX_COMPILER=g++-7 BUILD_TYPE=Debug
+      addons: &gcc7
+        apt:
+          packages: g++-7
+          sources:
+            - ubuntu-toolchain-r-test
 
-    - env: COMPILER=g++-7 BUILD_TYPE=Release
+    - env: C_COMPILER=gcc-7 CXX_COMPILER=g++-7 BUILD_TYPE=Release
       addons: *gcc7
 
 install:
-  # Set the ${CXX} variable properly
-  - export CXX=${COMPILER}
+  # Set the compiler variables properly
+  - export CC=${C_COMPILER}
+  - export CXX=${CXX_COMPILER}
   - ${CXX} --version
 
   # Dependencies required by the CI are installed in ${TRAVIS_BUILD_DIR}/deps/
@@ -103,7 +107,7 @@ before_script:
   - cd "${TRAVIS_BUILD_DIR}"
   - mkdir build && cd build
   - cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-  
+
 script:
   # build and run tests
   - cmake --build . -- -j${JOBS}
